// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wnether Chat page matches snapshot 1`] = `
<div
  id="chatbox"
>
  <div>
    <div>
      <div
        className="MuiAvatar-root MuiAvatar-circle friendavatar"
      >
        <img
          className="MuiAvatar-img"
          src="undefined"
        />
      </div>
      <label>
        Talking To: 
      </label>
      <span>
        Jack
      </span>
      <div
        id="displayDiv"
      >
        <div>
          <div
            className="bubbleLeft"
          >
            <span
              className="timeCssLeft"
              id="Jeffrey@abc123 acbacbacbacbabcbscba"
            >
              2020-11-28 05:13:07
            </span>
            <br />
            Jeffrey@abc123 acbacbacbacbabcbscba
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
              disabled={false}
              id="deleteBtn"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <span
                  className="MuiButton-startIcon MuiButton-iconSizeSmall"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    size="small"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div>
      <label>
        Current User: 
      </label>
      <span>
        
      </span>
    </div>
    <div>
      <div
        id="MessageBox"
      >
        <textarea
          cols="10"
          id="msg"
          placeholder="Type here/ Preview Section"
          rows="5"
        />
        <div
          id="displayArea"
        >
          <div
            id="imageMessageDiv"
          >
            <img
              alt=""
              id="showingArea"
            />
          </div>
          <div
            id="videoMessageDiv"
          >
             
          </div>
        </div>
        <button
          className="button"
          id="messagebtn"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
            />
          </svg>
        </button>
        <button
          className="button"
          id="videocallbtn"
          onClick={[Function]}
          type="button"
        >
          Video Call
        </button>
        <button
          id="deleteCoversationButton"
          onClick={[Function]}
          type="submit"
        >
          Delete the conversation
        </button>
      </div>
      <div
        id="messageAndImgeButton"
      >
        <input
          accept=".jpg"
          id="imgInput"
          name="attachment[0][uploaded_data]"
          onChange={[Function]}
          type="file"
        />
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      id="audio"
    >
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
          />
        </svg>
      </button>
      <button
        className="button"
        id="stopbtn"
        onClick={[Function]}
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h12v12H6z"
          />
        </svg>
      </button>
      <button
        className="button"
        onClick={[Function]}
        type="submit"
      >
        send
      </button>
      <div
        id="audioMessageDiv"
      >
         
      </div>
    </div>
    <div
      id="video"
    >
      <input
        id="videoInput"
        onChange={[Function]}
        type="file"
      />
      <button
        className="button"
        onClick={[Function]}
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 4l2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4h-4z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Wnether Contacts page matches snapshot 1`] = `
<div
  className="contactBox"
>
  <div
    className="MuiAvatar-root MuiAvatar-circle friendavatar"
  >
    <img
      className="MuiAvatar-img"
      src="https://img.favpng.com/6/14/19/computer-icons-user-profile-icon-design-png-favpng-vcvaCZNwnpxfkKNYzX3fYz7h2.jpg"
    />
  </div>
  <button
    className="messageButton"
    onClick={[Function]}
    type="submit"
  >
    <img
      alt="message"
      id="messageImage"
      src="chat.png"
    />
  </button>
  <button
    className="deleteFriend"
    onClick={[Function]}
    type="button"
  >
     
    <svg
      className="bi bi-person-x-fill"
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6.146-2.854a.5.5 0 0 1 .708 0L14 6.293l1.146-1.147a.5.5 0 0 1 .708.708L14.707 7l1.147 1.146a.5.5 0 0 1-.708.708L14 7.707l-1.146 1.147a.5.5 0 0 1-.708-.708L13.293 7l-1.147-1.146a.5.5 0 0 1 0-.708z"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    className="contacts"
  />
</div>
`;

exports[`Wnether Home page matches snapshot 1`] = `
<div>
  <header
    id="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="messenger.svg"
    />
    <span
      className="AppTitle"
      id="logox"
    >
       
      Video & Messaging Web App
    </span>
    <a
      href="/profile"
      id="loginLink"
      onClick={[Function]}
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle"
        id="avatar"
      >
        <img
          className="MuiAvatar-img"
          src="https://img.favpng.com/6/14/19/computer-icons-user-profile-icon-design-png-favpng-vcvaCZNwnpxfkKNYzX3fYz7h2.jpg"
        />
      </div>
    </a>
  </header>
  <div
    className="n\\\\NavigationBar"
  >
    <div
      className="MuiDrawer-root MuiDrawer-docked drawer"
    >
      <div
        className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <hr
          className="MuiDivider-root"
        />
        <ul
          className="MuiList-root MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <a
                  href="/homepage"
                  onClick={[Function]}
                >
                  People
                </a>
              </span>
            </div>
          </div>
        </ul>
        <ul
          className="MuiList-root MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <a
                  href="/story"
                  onClick={[Function]}
                >
                  Story
                </a>
              </span>
            </div>
          </div>
        </ul>
        <hr
          className="MuiDivider-root"
        />
        <ul
          className="MuiList-root MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <a
                  href="/profile"
                  onClick={[Function]}
                >
                  Profile
                </a>
              </span>
            </div>
          </div>
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <button
              onClick={[Function]}
              type="submit"
            >
              Logout
            </button>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div
    id="homeMainSection"
  >
    <div
      id="page"
    >
      <div
        id="videoCall"
      />
      <div
        id="addingContacts"
      >
        <div
          id="searchBox"
        >
          <span
            id="searchLabel"
          >
            Search
          </span>
          <input
            icon="search"
            label="Search Friend"
            onChange={[Function]}
          />
        </div>
        <div
          id="listOfContacts"
        />
        <div
          id="AddContact"
        >
          <div
            id="searchBoxStranger"
          >
            <span
              id="searchLabel"
            >
              Explore New People
            </span>
            <input
              icon="search"
              label="Add Strangers"
              onChange={[Function]}
            />
          </div>
          <div
            id="PeopleToAdd"
          />
        </div>
      </div>
    </div>
    <div
      id="chatBox"
    />
  </div>
</div>
`;

exports[`Wnether Login page matches snapshot 1`] = `
<div
  className="App"
>
  <div
    className="main"
  />
</div>
`;

exports[`Wnether Login page matches snapshot 2`] = `
<div>
  <header
    id="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="messenger.svg"
    />
    <span
      className="AppTitle"
      id="logox"
    >
       
      Video & Messaging Web App
    </span>
  </header>
  <div
    id="RegisterDiv"
  />
  <div
    className="loginMain"
  >
    <div
      className="login"
      id="login"
    >
      <div>
        <label
          htmlFor="fname"
        >
          Username :
        </label>
        <input
          className="loginEle"
          id="LoginUsername"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="fname"
        >
          Password :
        </label>
        <input
          className="loginEle"
          id="loginPassword"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text loginEle MuiButton-textPrimary MuiButton-textSizeLarge MuiButton-sizeLarge"
        disabled={false}
        id="loginButton"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Login In
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      id="JumpLink"
    >
      <span>
         Or you could 
      </span>
      <a
        href="/register"
        id="loginLink"
        onClick={[Function]}
      >
         
        register now!
      </a>
    </div>
  </div>
</div>
`;

exports[`Wnether Main page matches snapshot 1`] = `
<div
  className="main"
/>
`;

exports[`Wnether MessagesComponent page matches snapshot 1`] = `
<div
  id="chatbox"
>
  <div>
    <div>
      <div
        className="MuiAvatar-root MuiAvatar-circle friendavatar"
      >
        <img
          className="MuiAvatar-img"
          src="undefined"
        />
      </div>
      <label>
        Talking To: 
      </label>
      <span>
        Liam
      </span>
      <div
        id="displayDiv"
      >
        <div>
          <div>
            <div
              className="bubbleRight"
            >
              <span
                className="timeCssRight"
              >
                2020-11-28 05:13:07
              </span>
              <br />
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Jeffrey<a href=http://localhost:3000/profileOther/abc123 target=\\"_blank\\">@abc123</a> acbacbacbacbabcbscba",
                  }
                }
              />
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                disabled={false}
                id="deleteBtn"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <span
                    className="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root"
                      focusable="false"
                      size="small"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              id="readStatusRight"
            >
              delievered
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div>
      <label>
        Current User: 
      </label>
      <span>
        Jack
      </span>
    </div>
    <div>
      <div
        id="MessageBox"
      >
        <textarea
          cols="10"
          id="msg"
          placeholder="Type here/ Preview Section"
          rows="5"
        />
        <div
          id="displayArea"
        >
          <div
            id="imageMessageDiv"
          >
            <img
              alt=""
              id="showingArea"
            />
          </div>
          <div
            id="videoMessageDiv"
          >
             
          </div>
        </div>
        <button
          className="button"
          id="messagebtn"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
            />
          </svg>
        </button>
        <button
          className="button"
          id="videocallbtn"
          onClick={[Function]}
          type="button"
        >
          Video Call
        </button>
        <button
          id="deleteCoversationButton"
          onClick={[Function]}
          type="submit"
        >
          Delete the conversation
        </button>
      </div>
      <div
        id="messageAndImgeButton"
      >
        <input
          accept=".jpg"
          id="imgInput"
          name="attachment[0][uploaded_data]"
          onChange={[Function]}
          type="file"
        />
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      id="audio"
    >
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
          />
        </svg>
      </button>
      <button
        className="button"
        id="stopbtn"
        onClick={[Function]}
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h12v12H6z"
          />
        </svg>
      </button>
      <button
        className="button"
        onClick={[Function]}
        type="submit"
      >
        send
      </button>
      <div
        id="audioMessageDiv"
      >
         
      </div>
    </div>
    <div
      id="video"
    >
      <input
        id="videoInput"
        onChange={[Function]}
        type="file"
      />
      <button
        className="button"
        onClick={[Function]}
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 4l2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4h-4z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Wnether NavigationBar page matches snapshot 1`] = `
<div
  className="n\\\\NavigationBar"
>
  <div
    className="MuiDrawer-root MuiDrawer-docked drawer"
  >
    <div
      className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
    >
      <hr
        className="MuiDivider-root"
      />
      <ul
        className="MuiList-root MuiList-padding"
      >
        <div
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              <a
                href="/homepage"
                onClick={[Function]}
              >
                People
              </a>
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </div>
      </ul>
      <ul
        className="MuiList-root MuiList-padding"
      >
        <div
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              <a
                href="/story"
                onClick={[Function]}
              >
                Story
              </a>
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </div>
      </ul>
      <hr
        className="MuiDivider-root"
      />
      <ul
        className="MuiList-root MuiList-padding"
      >
        <div
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              <a
                href="/profile"
                onClick={[Function]}
              >
                Profile
              </a>
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </div>
        <div
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <button
            onClick={[Function]}
            type="submit"
          >
            Logout
          </button>
          <span
            className="MuiTouchRipple-root"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Wnether Post page matches snapshot 1`] = `
<div
  className="Post"
>
  <div />
  <div />
  <div>
    <img
      alt=""
      height="200"
      src="undefined"
      width="300"
    />
  </div>
  <div>
    undefined
  </div>
  <div>
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      undefined
    </span>
  </div>
</div>
`;

exports[`Wnether Profile page matches snapshot 1`] = `
<div
  id="Profile"
>
  <div
    className="n\\\\NavigationBar"
  >
    <div
      className="MuiDrawer-root MuiDrawer-docked drawer"
    >
      <div
        className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <hr
          className="MuiDivider-root"
        />
        <ul
          className="MuiList-root MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <a
                  href="/homepage"
                  onClick={[Function]}
                >
                  People
                </a>
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </ul>
        <ul
          className="MuiList-root MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <a
                  href="/story"
                  onClick={[Function]}
                >
                  Story
                </a>
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </ul>
        <hr
          className="MuiDivider-root"
        />
        <ul
          className="MuiList-root MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <a
                  href="/profile"
                  onClick={[Function]}
                >
                  Profile
                </a>
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <button
              onClick={[Function]}
              type="submit"
            >
              Logout
            </button>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circle"
      id="avatarProfile"
    >
      <img
        className="MuiAvatar-img"
        src="https://img.favpng.com/6/14/19/computer-icons-user-profile-icon-design-png-favpng-vcvaCZNwnpxfkKNYzX3fYz7h2.jpg"
      />
    </div>
  </div>
  <h1 />
  <h3>
    Registration Date:
  </h3>
  <div
    id="profileButtonDiv"
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div>
      <button
        className="ant-btn profileButton"
        id="changeAvatarButton"
        onClick={[Function]}
        type="button"
      >
        <span>
          change avatar / profile picture
        </span>
      </button>
      <div>
         
        <button
          className="ant-btn profileButton"
          id="changePasswordButton"
          onClick={[Function]}
          type="button"
        >
          <span>
            Change password
          </span>
        </button>
      </div>
      <div>
        <button
          className="ant-btn profileButton"
          id="deactivateAccountButton"
          onClick={[Function]}
          type="button"
        >
          <span>
            Deactivate the account
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  >
    <input
      className="loginEle"
      id="loginPassword"
      name="deactivatePassword"
      onChange={[Function]}
      type="password"
      value=""
    />
    <button
      id="handleDeactivateButton"
      onClick={[Function]}
      type="button"
    >
      Deactivate
    </button>
    <button
      onClick={[Function]}
      type="submit"
    >
       
      Go back
    </button>
  </div>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  >
    <input
      accept="image/png, image/jpeg"
      name="attachments[0][uploaded_data]"
      onChange={[Function]}
      type="file"
    />
    <button
      onClick={[Function]}
      type="button"
    >
      Finish
    </button>
  </div>
  <div
    id="changePasswordDiv"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div>
      <div>
        <span>
          Orginal Password: 
        </span>
        <input
          className="loginEle"
          id="loginPassword"
          name="passwordInput"
          onChange={[Function]}
          value=""
        />
        <div
          style={
            Object {
              "color": "red",
              "display": "none",
            }
          }
        >
          Your orginal password is incorrect
        </div>
      </div>
      <div>
        <span>
          New Password :
        </span>
        <input
          className="loginEle"
          id="loginPassword"
          name="newPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div>
        <span>
          Password Conformation:
        </span>
        <input
          className="loginEle"
          id="loginPassword"
          name="passwordConformation"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        style={
          Object {
            "color": "red",
            "display": "none",
          }
        }
      >
        passwords doesn't Match!
      </div>
      <div
        style={
          Object {
            "color": "red",
            "display": "none",
          }
        }
      >
        passwords length should be greater than 5 and should contain at least a digit and a character
      </div>
      <button
        className="ant-btn loginEle ant-btn-button ant-btn-sm"
        color="primary"
        id="loginButton"
        onClick={[Function]}
        type="button"
      >
        <span>
          Reset Password
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Wnether Register page matches snapshot 1`] = `
<div>
  <header
    id="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="messenger.svg"
    />
    <span
      className="AppTitle"
      id="logox"
    >
       
      Video & Messaging Web App
    </span>
  </header>
  <div
    id="RegisterDiv"
  >
    <form
      className="ant-form ant-form-horizontal RegisterForm"
      id="RegisterForm"
      onSubmit={[Function]}
    >
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="register_username"
            onClick={[Function]}
            title="Username"
          >
            Username
          </label>
        </div>
        <div
          className="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
          style={Object {}}
        >
          <div
            className="ant-form-item-control"
          >
            <span
              className="ant-form-item-children"
            >
              <input
                className="ant-input textbox"
                data-__field={
                  Object {
                    "name": "username",
                  }
                }
                data-__meta={
                  Object {
                    "name": "username",
                    "originalProps": Object {
                      "className": "textbox",
                      "type": "text",
                    },
                    "ref": null,
                    "rules": Array [
                      Object {
                        "message": "Please input your Username!",
                        "required": true,
                      },
                    ],
                    "trigger": "onChange",
                    "validate": Array [
                      Object {
                        "rules": Array [
                          Object {
                            "message": "Please input your Username!",
                            "required": true,
                          },
                        ],
                        "trigger": Array [
                          "onChange",
                        ],
                      },
                    ],
                    "valuePropName": "value",
                  }
                }
                id="register_username"
                onChange={[Function]}
                onKeyDown={[Function]}
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="register_password"
            onClick={[Function]}
            title="Password"
          >
            Password
          </label>
        </div>
        <div
          className="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
          style={Object {}}
        >
          <div
            className="ant-form-item-control"
          >
            <span
              className="ant-form-item-children"
            >
              <span
                className="ant-input-password textbox ant-input-affix-wrapper"
              >
                <input
                  action="click"
                  className="ant-input"
                  data-__field={
                    Object {
                      "name": "password",
                    }
                  }
                  data-__meta={
                    Object {
                      "name": "password",
                      "originalProps": Object {
                        "action": "click",
                        "className": "textbox",
                        "inputPrefixCls": "ant-input",
                        "prefixCls": "ant-input-password",
                        "visibilityToggle": true,
                      },
                      "ref": null,
                      "rules": Array [
                        Object {
                          "message": "Please input your password!",
                          "required": true,
                        },
                        Object {
                          "validator": [Function],
                        },
                      ],
                      "trigger": "onChange",
                      "validate": Array [
                        Object {
                          "rules": Array [
                            Object {
                              "message": "Please input your password!",
                              "required": true,
                            },
                            Object {
                              "validator": [Function],
                            },
                          ],
                          "trigger": Array [
                            "onChange",
                          ],
                        },
                      ],
                      "valuePropName": "value",
                    }
                  }
                  id="register_password"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  style={null}
                  type="password"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <i
                    aria-label="icon: eye-invisible"
                    className="anticon anticon-eye-invisible ant-input-password-icon"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    tabIndex={-1}
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 0 0 0-51.5zm-63.57-320.64L836 122.88a8 8 0 0 0-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 0 0 0 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 0 0 0 11.31L155.17 889a8 8 0 0 0 11.31 0l712.15-712.12a8 8 0 0 0 0-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 0 0-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 0 1 146.2-106.69L401.31 546.2A112 112 0 0 1 396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 0 0 227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 0 1-112 112z"
                      />
                    </svg>
                  </i>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="register_confirm"
            onClick={[Function]}
            title="Confirm Password"
          >
            Confirm Password
          </label>
        </div>
        <div
          className="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
          style={Object {}}
        >
          <div
            className="ant-form-item-control"
          >
            <span
              className="ant-form-item-children"
            >
              <span
                className="ant-input-password textbox ant-input-affix-wrapper"
              >
                <input
                  action="click"
                  className="ant-input"
                  data-__field={
                    Object {
                      "name": "confirm",
                    }
                  }
                  data-__meta={
                    Object {
                      "name": "confirm",
                      "originalProps": Object {
                        "action": "click",
                        "className": "textbox",
                        "inputPrefixCls": "ant-input",
                        "onBlur": [Function],
                        "prefixCls": "ant-input-password",
                        "visibilityToggle": true,
                      },
                      "ref": null,
                      "rules": Array [
                        Object {
                          "message": "Please confirm your password!",
                          "required": true,
                        },
                        Object {
                          "validator": [Function],
                        },
                      ],
                      "trigger": "onChange",
                      "validate": Array [
                        Object {
                          "rules": Array [
                            Object {
                              "message": "Please confirm your password!",
                              "required": true,
                            },
                            Object {
                              "validator": [Function],
                            },
                          ],
                          "trigger": Array [
                            "onChange",
                          ],
                        },
                      ],
                      "valuePropName": "value",
                    }
                  }
                  id="register_confirm"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  style={null}
                  type="password"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <i
                    aria-label="icon: eye-invisible"
                    className="anticon anticon-eye-invisible ant-input-password-icon"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    tabIndex={-1}
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 0 0 0-51.5zm-63.57-320.64L836 122.88a8 8 0 0 0-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 0 0 0 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 0 0 0 11.31L155.17 889a8 8 0 0 0 11.31 0l712.15-712.12a8 8 0 0 0 0-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 0 0-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 0 1 146.2-106.69L401.31 546.2A112 112 0 0 1 396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 0 0 227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 0 1-112 112z"
                      />
                    </svg>
                  </i>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text Button MuiButton-textSecondary MuiButton-textSizeLarge MuiButton-sizeLarge"
        disabled={false}
        id="register_button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            id="ResgisterSpan"
          >
            Register
          </span>
        </span>
      </button>
      <div
        id="JumpLinklogin"
      >
        <span>
           I already have an account, 
        </span>
        <a
          href="/login"
          id="registerLink"
          onClick={[Function]}
        >
           
          Go to Login
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`Wnether Story page matches snapshot 1`] = `<div />`;

exports[`Wnether Stranger page matches snapshot 1`] = `
<div
  className="contactBox"
>
  <div
    className="MuiAvatar-root MuiAvatar-circle stangerAvater"
  >
    <img
      className="MuiAvatar-img"
      src="https://img.favpng.com/6/14/19/computer-icons-user-profile-icon-design-png-favpng-vcvaCZNwnpxfkKNYzX3fYz7h2.jpg"
    />
  </div>
  <button
    className="addFriend"
    onClick={[Function]}
    type="submit"
  >
    <svg
      className="bi bi-person-plus-fill"
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm7.5-3a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    className="strangers"
  />
</div>
`;

exports[`Wnether Timer page matches snapshot 1`] = `
<div>
   
</div>
`;

exports[`Wnether TopBanner page matches snapshot 1`] = `
<header
  id="App-header"
>
  <img
    alt="logo"
    className="App-logo"
    src="messenger.svg"
  />
  <span
    className="AppTitle"
    id="logox"
  >
     
    Video & Messaging Web App
  </span>
  <a
    href="/profile"
    id="loginLink"
    onClick={[Function]}
  >
    <div
      className="MuiAvatar-root MuiAvatar-circle"
      id="avatar"
    >
      <img
        className="MuiAvatar-img"
        src="https://img.favpng.com/6/14/19/computer-icons-user-profile-icon-design-png-favpng-vcvaCZNwnpxfkKNYzX3fYz7h2.jpg"
      />
    </div>
  </a>
</header>
`;

exports[`Wnether videoCall page matches snapshot 1`] = `<videoCall />`;
